--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<app-navmenu></app-navmenu>
+<app-navmenu [usuario]="user" [estaLogueado]="isLogueado" ></app-navmenu>
 
 <div class="wrapper">
   <div class="page-header header-filter">
@@ -13,7 +13,7 @@
       <div class="content-center brand">
         <h1 class="h1-seo">Clinica Avellaneda</h1>
         <h3>
-         Somos una clinica en plena en la ciudad de avellaneda
+         Somos una clinica en la ciudad de avellaneda 
         </h3>
       </div>
     </div>
