--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,94 @@
-<p>login works!</p>
+<app-navmenu></app-navmenu>
+<br>
+<div class="wrapper">
+    <div class="page-header">
+      <div class="page-header-image"></div>
+      <div class="squares square1"></div>
+      <div class="squares square2"></div>
+      <div class="squares square3"></div>
+      <div class="squares square4"></div>
+      <div class="squares square5"></div>
+      <div class="squares square6"></div>
+      <div class="squares square7"></div>
+      <div class="container">
+        <div class="content-center brand col-lg-10 col-md-6">
+          <div class="card card-register">
+            <div class="card-header">
+              <img
+                alt="Card image"
+                class="card-img"
+                src="assets/img/square1-red.png"
+              />
+
+              <h3 class="card-title">Ingreso</h3>
+            </div>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-4">
+                  <button type="button" tooltip="Administrador" class="btn btn-primary btn-icon btn-round mr-1" (click)="CargarDefault('A')">
+                    <i class="tim-icons icon-settings-gear-63"></i>
+                    </button>
+                </div>
+                <div class="col-4">
+                  <button type="button" tooltip="Paciente" class="btn btn-succes btn-icon btn-round mr-1" (click)="CargarDefault('P')">
+                    <i class="tim-icons icon-single-02"></i>
+                    </button>
+                </div>
+                <div class="col-4">
+                  <button type="button" tooltip="Profesional" class="btn btn-danger btn-icon btn-round mr-1" (click)="CargarDefault('E')">
+                    <i class="tim-icons icon-heart-2"></i>
+                    </button>
+                </div>
+              </div>
+              <form class="form" [formGroup]="form">
+                <div class="input-group" [ngClass]="{ 'input-group-focus': focus3 === true }">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <i class="tim-icons icon-email-85"> </i>
+                    </div>
+                  </div>
+                  <input class="form-control" placeholder="Email" type="text"
+                    (focus)="focus3 = true" (blur)="focus3 = false" formControlName="Email"/>
+                </div>
+                <div class="input-group"[ngClass]="{ 'input-group-focus': focus4 === true }">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <i class="tim-icons icon-lock-circle"> </i>
+                    </div>
+                  </div>
+                  <input class="form-control"placeholder="Password"type="text"
+                  (focus)="focus4 = true" (blur)="focus4 = false" formControlName="Password"/>
+                </div>
+                <div class="form-check text-left">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="checkbox" />
+
+                    <span class="form-check-sign"> </span> va el capchta
+                  </label>
+                </div>
+              </form>
+            </div>
+            <div class="card-footer">
+              <div class="row">
+                <div class="col-4">
+                  <a class="btn btn-primary btn-round btn-lg" (click)="Ingresar()" >
+                    Ingresar
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a class="btn btn-succes btn-round btn-lg" [routerLink]="['/registro']">
+                    Registrarse
+                  </a>
+                </div>
+                <div class="col-4">
+                  <a class="btn btn-danger btn-round btn-lg" [routerLink]="['/bienvenida']">
+                    Cancelar
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+</div>
+</div>
+</div>
+</div>
