--- a/src/app/pages/especialidades-home/alta-especialidades/alta-especialidades.component.html
+++ b/src/app/pages/especialidades-home/alta-especialidades/alta-especialidades.component.html
@@ -1,1 +1,44 @@
-<p>alta-especialidades works!</p>
+<div class="modal" [ngStyle]="{'display': showModalAlta ? 'block' : 'none'} " >
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <p class="modal-title" id="exampleModalAlta">Alta de Especialidad</p>
+          <button type="button" class="close" (click)="cerrar()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="form" (keyup.enter)="Submit()">
+              <div class="form-group">
+                <label for="idEspecialidad">Id: </label>
+                <input type="text" id="idEspecialidad" formControlName="idEspecialidad" class="form-control" placeholder="Id Especialidad" [ngClass]="{ 'is-invalid': submitted && f.idEspecialidad.errors?.required }">
+                <div *ngIf="submitted && f.idEspecialidad.errors?.required" class="invalid-feedback"
+                  autocomplete="username">
+                  <div *ngIf="f.idEspecialidad.errors?.required">Debe ingresar un id para la especialidad</div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="nombre">Nombre: </label>
+                <input type="text" id="nombre" formControlName="nombre" class="form-control" placeholder="Nombre" [ngClass]="{ 'is-invalid': submitted && f.nombre.errors?.required }">
+                <div *ngIf="submitted && f.nombre.errors?.required" class="invalid-feedback"
+                  autocomplete="username">
+                  <div *ngIf="f.nombre.errors?.required">Debe ingresar un nombre.</div>
+                </div>
+              </div>
+              <small *ngIf="error" class="text-danger font-weight-bold"><i class="fa fa-times"></i> {{errorMessage}} </small>
+              <small *ngIf="success" class="text-success font-weight-bold"><i class="fas fa-check"></i> Especialidad registrada
+                correctamente. </small>
+              <hr>
+              <div class="row">
+                <div class="col-6">
+                  <button type="submit" class="btn btn-primary" (click)="Submit()">Registrar</button><br>
+                </div>
+                <div class="col-6">
+                  <button type="submit" class="btn btn-secondary" (click)="cerrar()">Cancelar</button><br>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
