--- a/src/app/pages/especialidades-home/especialidades-home.component.html
+++ b/src/app/pages/especialidades-home/especialidades-home.component.html
@@ -1,1 +1,22 @@
-<p>especialidades-home works!</p>
+<app-navmenu [usuario]="user" [estaLogueado]="isLogueado" ></app-navmenu>
+
+<div class="wrapper">
+  <div class="page-header header-filter">
+    <div class="squares square1"></div>
+    <div class="squares square2"></div>
+    <div class="squares square3"></div>
+    <div class="squares square4"></div>
+    <div class="squares square5"></div>
+    <div class="squares square6"></div>
+    <div class="squares square7"></div>
+    <div class="container">
+      <div class="content-center">
+        <h3>Listado de Especialidades</h3>
+        <app-listado-especialidades (showModalOuput)="showModalHome=$event" [listaEspecialidad]="listaEspecialidad"></app-listado-especialidades>
+      </div>
+    </div>
+  </div>
+  
+  <app-footer></app-footer>
+</div>
+<app-alta-especialidades #modalRegistro [showModalAlta]="showModalHome" (closeModal)="showModalHome = false" (registradoCorrectamente)="cargarLista()"></app-alta-especialidades>
