--- a/src/app/pages/profesionales-home/listado-profesionales/listado-profesionales.component.html
+++ b/src/app/pages/profesionales-home/listado-profesionales/listado-profesionales.component.html
@@ -1,1 +1,68 @@
-<p>listado-profesionales works!</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th class="text-center">#</th>
+            <th>Name</th>
+            <th>Job Position</th>
+            <th>Since</th>
+            <th class="text-right">Salary</th>
+            <th class="text-right">Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="text-center">1</td>
+            <td>Andrew Mike</td>
+            <td>Develop</td>
+            <td>2013</td>
+            <td class="text-right">&euro; 99,225</td>
+            <td class="td-actions text-right">
+                <button type="button" rel="tooltip" class="btn btn-info btn-simple btn-icon btn-sm">
+                    <i class="tim-icons icon-single-02"></i>
+                </button>
+                <button type="button" rel="tooltip" class="btn btn-success btn-simple btn-icon btn-sm">
+                    <i class="tim-icons icon-settings-gear-63"></i>
+                </button>
+                <button type="button" rel="tooltip" class="btn btn-danger btn-simple btn-icon btn-sm">
+                    <i class="tim-icons icon-simple-remove"></i>
+                </button>
+            </td>
+        </tr>
+        <tr>
+            <td class="text-center">2</td>
+            <td>John Doe</td>
+            <td>Design</td>
+            <td>2012</td>
+            <td class="text-right">&euro; 89,241</td>
+            <td class="td-actions text-right">
+                <button type="button" rel="tooltip" class="btn btn-info btn-simple btn-icon btn-sm">
+                    <i class="tim-icons icon-single-02"></i>
+                </button>
+                <button type="button" rel="tooltip" class="btn btn-success btn-simple btn-icon btn-sm">
+                    <i class="tim-icons icon-settings-gear-63"></i>
+                </button>
+                <button type="button" rel="tooltip" class="btn btn-danger btn-simple btn-icon btn-sm">
+                    <i class="tim-icons icon-simple-remove"></i>
+                </button>
+            </td>
+        </tr>
+        <tr>
+            <td class="text-center">3</td>
+            <td>Alex Mike</td>
+            <td>Design</td>
+            <td>2010</td>
+            <td class="text-right">&euro; 92,144</td>
+            <td class="td-actions text-right">
+                <button type="button" rel="tooltip" class="btn btn-info btn-simple btn-icon btn-sm">
+                    <i class="tim-icons icon-single-02"></i>
+                </button>
+                <button type="button" rel="tooltip" class="btn btn-success btn-simple btn-icon btn-sm">
+                    <i class="tim-icons icon-settings-gear-63"></i>
+                </button>
+                <button type="button" rel="tooltip" class="btn btn-danger btn-simple btn-icon btn-sm">
+                    <i class="tim-icons icon-simple-remove"></i>
+                </button>
+            </td>
+        </tr>
+    </tbody>
+</table>
