--- a/src/app/pages/especialidades-home/listado-especialidades/listado-especialidades.component.html
+++ b/src/app/pages/especialidades-home/listado-especialidades/listado-especialidades.component.html
@@ -2,6 +2,13 @@
 <table class="table">
     <thead>
         <tr>
+            <th class="text-center" colspan="8">
+              <button class="float-right  btn btn-outline-danger btn-sm" type="button" (click)="showEspecialidadAlta()"><i class="fas fa-user-plus"></i>Nuevo</button>
+              <!--<app-csv class="float-right csv" [data]="data" [filename]="generarNombreCsv()" [options]="options"></app-csv>
+              <button  class="float-right  btn btn-outline-primary btn-sm  mx-auto mb-4" type="button" (click)="generarPDF()" ><i class="fas fa-file"></i>Generar PDF</button>-->
+            </th>
+          </tr>
+        <tr>
             <th class="text-center">#</th>
             <th>Nombre</th>
             <th>Fecha</th>
@@ -18,7 +25,7 @@
             <td>{{especialidad.usuarioAlta}}</td>
             <td>{{especialidad.activa}}</td>
             <td class="td-actions text-right">
-                <button type="button" rel="tooltip" (click)="showMesaAlta()" class="btn btn-info btn-simple btn-icon btn-sm">
+                <button type="button" rel="tooltip" (click)="showEspecialidadEdit(especialidad)" class="btn btn-info btn-simple btn-icon btn-sm">
                     <i class="tim-icons icon-single-02"></i>
                 </button>
                 <button type="button" rel="tooltip" class="btn btn-success btn-simple btn-icon btn-sm">
