--- a/src/app/pages/profesionales-home/alta-profesionales/alta-profesionales.component.html
+++ b/src/app/pages/profesionales-home/alta-profesionales/alta-profesionales.component.html
@@ -1,1 +1,152 @@
-<p>alta-profesionales works!</p>
+<div class="modal modal-black" [ngStyle]="{'display': showModalAlta ? 'block' : 'none'} " >
+    <div class="modal-dialog ">
+      <div class="modal-content">
+        <div class="modal-header">
+          <p class="modal-title" id="exampleModalAlta">Alta de Profesional</p>
+          <button type="button" class="close" (click)="cerrar()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form [formGroup]="form" (keyup.enter)="Submit()">
+          <div class="row">
+            <div class="col-6">
+                <div class="form-group">
+                  <input type="text" id="idProfesional" formControlName="idProfesional" class="form-control" placeholder="Id Profesional" [ngClass]="{ 'is-invalid': submitted && f.idProfesional.errors?.required }">
+                  <div *ngIf="submitted && f.idProfesional.errors?.required" class="invalid-feedback"
+                    autocomplete="username">
+                    <div *ngIf="f.idProfesional.errors?.required">Debe ingresar un id para el Profesional</div>
+                  </div>
+                </div>
+            </div>
+            <div class="col-6">
+              <div class="form-group">
+                <select id="especialidad" formControlName="especialidad" class="form-control" placeholder="seleccione">
+                  <option selected value="">Seleccione Especialidad</option>
+                  <option >Clinica</option>
+                </select>
+                <div *ngIf="submitted && f.especialidad.errors?.required" class="invalid-feedback">
+                  <div *ngIf="f.especialidad.errors?.required">Seleccione Especialidad.</div>
+                </div>
+            </div>
+           </div>              
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="form-group">
+                <input type="text" id="nombre" formControlName="nombre" class="form-control" placeholder="Nombre" [ngClass]="{ 'is-invalid': submitted && f.nombre.errors?.required }">               
+                <div *ngIf="submitted && f.nombre.errors?.required" class="invalid-feedback"
+                  autocomplete="username">
+                  <div *ngIf="f.nombre.errors?.required">Debe ingresar un nombre.</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="form-group">
+                <input type="text" id="apellido" formControlName="apellido" class="form-control" placeholder="Apellido" [ngClass]="{ 'is-invalid': submitted && f.apellido.errors?.required }">               
+                <div *ngIf="submitted && f.apellido.errors?.required" class="invalid-feedback"
+                  autocomplete="username">
+                  <div *ngIf="f.apellido.errors?.required">Debe ingresar un Apellido.</div>
+                </div>
+              </div>
+            </div>
+        </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="form-group">
+                <select id="sexo" formControlName="sexo" class="form-control" placeholder="seleccione">
+                  <option selected value="">Seleccione Sexo</option>
+                  <option >Masculino</option>
+                  <option>Femenino</option>
+                  <option>otros</option>
+                </select>
+                <div *ngIf="submitted && f.sexo.errors?.required" class="invalid-feedback">
+                  <div *ngIf="f.sexo.errors?.required">Seleccione sexo</div>
+                </div>
+            </div>
+            </div>
+            <div class="col-6">
+              <div class="form-group">
+                <input type="text" id="edad" formControlName="edad" class="form-control" placeholder="Edad" [ngClass]="{ 'is-invalid': submitted && f.edad.errors?.required }">               
+                <div *ngIf="submitted && f.edad.errors?.required" class="invalid-feedback"
+                  autocomplete="username">
+                  <div *ngIf="f.edad.errors?.required">Debe ingresar las edad.</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">      
+            <div class="col-6">
+              <div class="form-group">
+                <select id="tipoDni" formControlName="tipoDni" class="form-control" placeholder="seleccione">
+                  <option selected value="">Tipo Dni</option>
+                  <option >DNI</option>
+                  <option>LE</option>
+                  <option >LC</option>
+                  <option>otros</option>
+                </select>
+                <div *ngIf="submitted && f.tipoDni.errors?.required" class="invalid-feedback">
+                  <div *ngIf="f.tipoDni.errors?.required">Seleccione Tipo</div>
+                </div>
+            </div>             
+            </div>
+            <div class="col-6">
+              <div class="form-group">
+                <input type="text" id="dni" formControlName="dni" class="form-control" placeholder="Dni" [ngClass]="{ 'is-invalid': submitted && f.dni.errors?.required }">               
+                <div *ngIf="submitted && f.dni.errors?.required" class="invalid-feedback"
+                  autocomplete="username">
+                  <div *ngIf="f.dni.errors?.required">Debe ingresar un Dni.</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="form-group">
+                <select id="horario" formControlName="sexo" class="form-control" placeholder="seleccione">
+                  <option selected value="">Horario</option>
+                  <option>09-14</option>
+                  <option>14-20</option>
+                  <option>12-20</option>
+                  <option>otros</option>
+                </select>
+                <div *ngIf="submitted && f.horario.errors?.required" class="invalid-feedback">
+                  <div *ngIf="f.horario.errors?.required">Seleccione Horario</div>
+                </div>
+            </div>
+           </div>
+            <div class="col-6">
+                <div class="form-group">
+                  <select id="nacionalidad" formControlName="nacionalidad" class="form-control" placeholder="seleccione">
+                    <option selected value="">Nacionalidad</option>
+                    <option >Argentina</option>
+                    <option> Venezuela</option>
+                    <option> Colombia</option>
+                    <option >Brasil</option>
+                    <option>Mexico</option>
+                  </select>
+                  <div *ngIf="submitted && f.nacionalidad.errors?.required" class="invalid-feedback">
+                    <div *ngIf="f.nacionalidad.errors?.required">seleccione Nacionalidad.</div>
+                  </div>
+              </div>
+            </div>
+          </div>
+            <div class="row">
+              <small *ngIf="error" class="text-danger font-weight-bold"><i class="fa fa-times"></i> {{errorMessage}} </small>
+              <small *ngIf="success" class="text-success font-weight-bold"><i class="fas fa-check"></i> Especialidad registrada
+                correctamente. </small>
+            </div>
+              <hr>
+              <div class="row">
+                <div class="col-6">
+                  <button type="submit" class="btn btn-primary" (click)="Submit()">Registrar</button><br>
+                </div>
+                <div class="col-6">
+                  <button type="submit" class="btn btn-secondary" (click)="cerrar()">Cancelar</button><br>
+                </div>
+              </div>
+            </form>
+        </div>
+        </div>
+      </div>
+    </div>
