--- a/src/app/pages/pacientes-home/pacientes-home.component.html
+++ b/src/app/pages/pacientes-home/pacientes-home.component.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="content-center">
         <h3>Listado de Pacientes</h3>
-        <app-listado-pacientes></app-listado-pacientes>
+        <app-listado-pacientes  [listaPacientes]="listaPacientes"></app-listado-pacientes>
       </div>
     </div>
   </div>
