--- a/src/app/pages/profesionales-home/profesionales-home.component.html
+++ b/src/app/pages/profesionales-home/profesionales-home.component.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="content-center">
         <h3>Profesionales :</h3>
-            <app-listado-profesionales (showModalOuput)="showModalHome=$event" [listaProfesionales]="listaProfesionales"></app-listado-profesionales>
+            <app-listado-profesionales (showModalOuput)="showModalHome=$event"></app-listado-profesionales>
           </div>
         </div>
       </div>      
